# secret-santa-pp

./: .coverage  .gitignore  3RD-PARTY  Makefile  README.md  emailer.py  environment.yml  messageconstructor.py  pyproject.toml  sample-config.json  sample-criteria.json  sample-exclusion-criteria.csv  sample-low-prob-criteria.csv  sample-medium-prob-criteria.csv  sample-message.html  sample-message.txt  sample-participants.txt  sample-people.json  sample-subject.txt  secretsantagraph.py  secretsantapp.py
.circleci/: config.yml
.github/workflows/: ci.yml
secret-santa-pp/: cli.py  emailer.py  models.py  secretsantagraph.py
secret_santa_pp/: cli.py  config.py  email.py  email_message.py  email_message_manager.py  emailer.py  messageconstructor.py  secretsantapp.py  solution.py  stubs.py  wrapper.py
tests/: test_config.py  test_email_message.py  test_email_message_manager.py  test_solution.py
tests/helper/: config.py
