[tool.poetry]
name = "secret-santa-pp"
version = "1.0.0"
description = "Secret santa with a few extra bells and whistles"
authors = ["Joe Jacobs <git@hazardcell.com>"]
readme = "README.md"
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
matplotlib = "*"
matplotlib-stubs = "*"
networkx = "*"
pydantic = { version = "*", extras = ["email"] }
python = "^3.12"
rich = "*"
scipy = "*"
typer = "*"
types-networkx = "*"

[tool.poetry.group.test.dependencies]
pyright = "*"
pytest = "*"
pytest-cov = "*"
ruff = "*"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["secret_santa_pp", "tests"]
ignore = [
  "secret_santa_pp/emailer.py",
  "secret_santa_pp/messageconstructor.py",
  "secret_santa_pp/secretsantapp.py",
]

[tool.pytest.ini_options]
addopts = "--cov=secret_santa_pp"
testpaths = ["tests"]

[tool.ruff]
exclude = [".coverage", ".git", ".pytest_cache", ".ruff_cache"]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D1",      # undocumented-### (makes docstrings compulsory)
  "D203",    # one-blank-line-before-class (choose between this and D211)
  "D213",    # multi-line-summary-second-line (choose between this and D212)
  "FBT",     # flake8-boolean-trap (would be good to add this back in)
  "COM812",  # missing-trailing-comma
  "ANN101",  # missing-type-self (no need as pyright picks this up automatically)
  "ANN102",  # missing-type-cls (no need as pyright picks this up automatically)
  "DTZ",     # flake8-datetimez (makes timezone info compulsory)
  "ANN002",  # missing-type-args
  "ANN003",  # missing-type-kwargs
  "PLR0913", # too-many-arguments
  "G004",    # logging-f-string
  "FIX",     # flake8-fixme
  "FA",      # flake8-future-annotations
  "ISC001",  # single-line-implicit-string-concatenation
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
force-sort-within-sections = true
forced-separate = ["tests"]
known-first-party = ["secret_santa_pp", "tests"]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"secret_santa_pp/cli.py" = ["UP007"]
"**/test_*.py" = ["ANN201", "S101"]
"tests/helper/config.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
